# trendlines

./: README.md  pyproject.toml  trendlines.ipynb  trendlines.py
