[tool.poetry]
name = "trendlines"
version = "0.1.0"
description = ""
authors = ["benisbuzz <ben@danziger.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
findpeaks = "^2.5.3"
yfinance = "^0.2.30"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
caerus = "^0.1.9"
TA-Lib = "^0.4.28"
ipython = "^8.15.0"
opencv-python = "^4.8.0.76"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
